added index title

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Git Test 1</title>
+        <title>whoooo</title>
     </head>
     <body>
-        
+
     </body>
 </html>
